Fix wysiwyg making the page too wide in chrome/safari (#518)
* Don't error if mailhog is down

* Remove unused Form file

* Fix horizontal overflow

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -12,6 +12,10 @@ html {
   @apply bg-gray-50;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .page {
   @apply py-5 px-2 md:px-4 max-w-screen-xl mx-auto;
 }
